Feature/java21 (#207)
* Create maven.yml

upgrade github actions

* adding sonar analysis to action

* upgrade google formatter for java 21

* update formatting for google formatter

* [issue #197] - upgrade to java 21

* close executor

* close executor

* [issue #197] - upgrade to java 21 and cleanup